# gandula-rl

./: .gitignore  LICENSE  README.md  RESULTS.md  evaluate.py  export_playbook.py  pyproject.toml  replay.py  train.py  web-playbook.json
baselines/: greedy.py
gandula_env/: __init__.py  actions.py  env.py
harness/: build.mjs  package-lock.json  package.json  wasm-node-shim.cjs
harness/src/: career-smoke.ts  career.ts  encode.ts  server.ts  smoke.cjs  teams-node.ts
scripts/: check_env.py  setup.sh
